--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Home</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <img class="logo" src="./logo.png" alt="logo" href="snpshtwrx.github.io">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="snpshtwrx.github.io/blog">Blog</a></li>
+                <li><a href="snpshtwrx.github.io/games">Games</a></li>
+                <li><a href="snpshtwrx.github.io/cryptography">Cryptography</a></li>
+                <li><a href="snpshtwrx.github.io/hacking">Hacking</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
