--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img class="logo" src="./logo.png" alt="logo" href="snpshtwrx.github.io">
         <nav>
             <ul class="nav_links">
-                <li><a href="snpshtwrx.github.io/blog">Blog</a></li>
-                <li><a href="snpshtwrx.github.io/games">Games</a></li>
-                <li><a href="snpshtwrx.github.io/cryptography">Cryptography</a></li>
-                <li><a href="snpshtwrx.github.io/hacking">Hacking</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/games">Games</a></li>
+                <li><a href="/cryptography">Cryptography</a></li>
+                <li><a href="/hacking">Hacking</a></li>
             </ul>
         </nav>
     </header>
