--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./logo.png" alt="logo" href="snpshtwrx.github.io">
+        <a href="/">
+            <img class="logo" src="./logo.png" alt="logo">
+        </a>
         <nav>
             <ul class="nav_links">
                 <li><a href="/blog">Blog</a></li>
