--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul class="nav_links">
                 <li><a href="/blog">Blog</a></li>
-                <li><a href="/games">Games</a></li>
+                <li><a href="https://snapshotworx.itch.io/">Games</a></li>
                 <li><a href="/cryptography">Cryptography</a></li>
                 <li><a href="/hacking">Hacking</a></li>
             </ul>
